# vita

./: .env.example  .gitignore  Graves.txt  PROJECT_OVERVIEW.md  README.md  RECAP.md  morning_brief_test.py  morning_brief_test.sh  test_tool.txt  test_tool2.txt
.claude/: settings.local.json
docs/: scripts-system.md
gateway/: package-lock.json  package.json  test_memory.ts
gateway/data/vitas/: default.vita.json
gateway/src/: cli.ts  index.ts  logger.ts
gateway/src/auth/: middleware.ts  (+1 more)
gateway/test/: run-tests.mjs
node/: pyproject.toml  requirements.txt  run.ps1  setup.ps1
node/src/: config.py  main.py
node/src/audio/: audio_utils.py  mic_stream.py  speaker.py
node/src/gateway_client/: protocol.py  tool_proxy.py  ws_client.py
node/src/live_session/: gemini_config.py  session_manager.py  tool_handler.py
node/src/tools/: dispatcher.py  media.py  steam.py
node/src/vision/: camera.py  screen_capture.py
node/src/vita_node.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
node/src/wakeword/: detector.py
scripts/morning_brief_build_script/: main.py  script.json
scripts/morning_brief_collect_tasks/: main.py  script.json
scripts/morning_brief_collect_weather/: main.py  script.json
scripts/morning_brief_common/: __init__.py  cli.py  config.json  config.py  gemini.py  utils.py  vault.py  workflow.py
scripts/morning_brief_deliver/: main.py  script.json
scripts/morning_brief_research_news/: main.py  script.json
scripts/morning_brief_select_song/: main.py  script.json
shared/: protocol.schema.json  vita-config.schema.json
(+29 files in other folders)
